--- a/vx/index.html
+++ b/vx/index.html
@@ -20,60 +20,76 @@
       z-index: 1;
       display: flex;
       justify-content: center;
-      flex-direction: column; /* Stack items vertically */
+      flex-direction: column;
       align-items: center;
       height: 100vh;
       text-align: center;
     }
 
     #arrows {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    bottom: 20%;
-    left: 50%;
-    transform: translateX(-50%);
-    filter: invert(1);
-}
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: absolute;
+      bottom: 20%;
+      left: 50%;
+      transform: translateX(-50%);
+      filter: invert(1);
+    }
 
     h1 {
       font-size: 3em;
       color: white;
-      margin-bottom: 10px; /* Adjust the bottom margin to reduce space */
+      margin-bottom: 10px;
     }
 
     h2 {
-       font-size: 1em; 
-       color: white;
-       margin-top: 0; /* Remove any unwanted top margin */
+      font-size: 1em;
+      color: white;
+      margin-top: 0;
     }
 
+    /* New background section */
+    #backgroundSection {
+      position: relative;
+      width: 100%;
+      height: 100vh; /* Full viewport height */
+      background-color: #111;
+      overflow: hidden;
+    }
 
-        /* Updated Sidebar Styling */
-#sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(244, 244, 244, 1);
-  color: white;
-  display: flex; /* Always keep it in the DOM */
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 0; /* Start invisible */
-  pointer-events: none; /* Disable interactions when not visible */
-  transition: opacity 0.5s ease-in-out; /* Smooth fade effect */
-  z-index: 10;
-}
+    #topoSVG {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #111;
+    }
 
-#sidebar.visible {
-  opacity: 1;
-  pointer-events: auto; /* Enable interactions when visible */
-}
+    /* Updated Sidebar Styling */
+    #sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(244, 244, 244, 1);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s ease-in-out;
+      z-index: 10;
+    }
 
+    #sidebar.visible {
+      opacity: 1;
+      pointer-events: auto;
+    }
 
     #sidebar a {
       padding: 15px 20px;
@@ -81,7 +97,7 @@
       font-size: 2.5em;
       color: #000;
       display: block;
-      position: relative; /* To position the pseudo-element */
+      position: relative;
       transition: color 0.5s;
       text-align: center;
     }
@@ -92,17 +108,17 @@
       bottom: 0;
       left: 0;
       width: 0;
-      height: 2px; /* Adjust the height of the underline */
+      height: 2px;
       background-color: #000;
       transition: width 0.5s ease;
     }
 
     #sidebar a:hover::after {
-      width: 100%; /* Full width on hover */
+      width: 100%;
     }
 
     #sidebar a:hover {
-      text-decoration: none; /* Remove default underline */
+      text-decoration: none;
     }
 
     #menuToggle {
@@ -128,32 +144,133 @@
       <a href="https://wisp.wispnet.org/TDP/Beta">Beta</a>
       <a href="https://wisp.wispnet.org/resources">Resources</a>
       <a href="https://wisp.wispnet.org/depreciated">Depreciated</a>
-  </div>
+    </div>
 
-  <section id="main" class="active">
-    <h1>The VX Project</h1>
-    <h2>The open-source weather research station.</h2>
-    <div id="arrows">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
-  </div>
-  </section>
+    <!-- Existing main section -->
+    <section id="main" class="active">
+      <h1>The VX Project</h1>
+      <h2>The open-source weather research station.</h2>
+      <div id="arrows">
+        <img src="fadetest/fadetest.svg" class="arrow" width="50">
+        <img src="fadetest/fadetest.svg" class="arrow" width="50">
+        <img src="fadetest/fadetest.svg" class="arrow" width="50">
+      </div>
+    </section>
 
-  <script>
-    function fadeInArrows() {
+    <!-- New background section -->
+    <section id="backgroundSection">
+      <svg id="topoSVG" width="100%" height="100%" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg" style="background:#111; display:block;">
+        <style>
+          path {
+            fill: none;
+            stroke: #f6c177; /* Soft gold */
+            stroke: #ffffff;
+            stroke-width: 1.2;
+            opacity: 0.6;
+            transition: opacity 3s ease-out;
+          }
+        </style>
+
+        <script type="application/ecmascript">
+          <![CDATA[
+          const svg = document.getElementById('topoSVG');
+          const width = 800;
+          const height = 600;
+          const layers = 20;
+          const spacing = 25;
+          const paths = [];
+          let offset = 0;
+          let fadeStartTime = null;
+          const fadeDuration = 10000;
+          let fadeInProgress = false;
+
+          function createPaths() {
+            for (let i = 0; i < layers; i++) {
+              const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
+              svg.appendChild(path);
+              paths.push(path);
+            }
+          }
+
+          function updatePaths(offset) {
+            for (let i = 0; i < layers; i++) {
+              const layerOffset = i * spacing;
+              let d = "M 0 " + (layerOffset + 100);
+
+              for (let x = 0; x <= width; x += 10) {
+                const y =
+                  layerOffset +
+                  100 +
+                  Math.sin((x + offset + i * 30) * 0.01) * 35 +
+                  Math.cos((x + offset + i * 15) * 0.005) * 15;
+                d += " L " + x + " " + y;
+              }
+
+              paths[i].setAttribute("d", d);
+            }
+          }
+
+          function startFadeOut() {
+            paths.forEach((path) => {
+              path.style.opacity = '0'; 
+            });
+          }
+
+          function resetPaths() {
+            paths.forEach((path) => {
+              path.style.opacity = '0.6'; 
+            });
+            offset = 0; 
+          }
+
+          createPaths();
+
+          function animate(currentTime) {
+            if (!fadeStartTime) {
+              fadeStartTime = currentTime;  
+            }
+
+            offset += 0.5;
+
+            if (offset > width) {
+              offset = -width; 
+            }
+
+            updatePaths(offset);
+
+            if (currentTime - fadeStartTime > fadeDuration && !fadeInProgress) {
+              fadeInProgress = true;
+              startFadeOut();
+              setTimeout(() => {
+                resetPaths();
+                fadeStartTime = currentTime; 
+                fadeInProgress = false;
+              }, 3000);
+            }
+
+            requestAnimationFrame(animate);
+          }
+
+          requestAnimationFrame(animate);
+          ]]>
+        </script>
+      </svg>
+    </section>
+
+    <script>
+      function fadeInArrows() {
         const arrows = document.querySelectorAll('.arrow');
         arrows.forEach((arrow, index) => {
-            setTimeout(() => {
-                arrow.style.opacity = 1;
-            }, index * 1000); // Delay each arrow by 1s
+          setTimeout(() => {
+            arrow.style.opacity = 1;
+          }, index * 1000);
         });
-    }
-    
-    window.onload = fadeInArrows;
-</script>
-  <script src="sidebar.js"> </script>
+      }
+      
+      window.onload = fadeInArrows;
+    </script>
 
-  <script src="eclipseflow.js"></script>
+    <script src="sidebar.js"> </script>
+    <script src="eclipseflow.js"></script>
 </body>
 </html>
