Update to Iteration Two (i2)
WISPNET Web Iteration Two (i2) update notes:

- Overhauled and restructured the resources/ folder and subsidiaries.
- Created resource folders for .md, .js, and .css files.
- Updated all webpages with correct resource locations.
- Reorganized main site area.
- Implemented research and development folder.
- Updated README.md.
- Reorganized the depreciated/ folder.
- Renamed several files.

--- a/IOserver/index.html
+++ b/IOserver/index.html
@@ -124,17 +124,17 @@
     }
 
     #welcome {
-      background: url('https://wisp.wispnet.org/resources/redlight-trainyard_img(DSC_0157).JPG') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/imgl/redlight-trainyard_img(DSC_0157).JPG') no-repeat center;
       background-size: cover;
     }
 
     #about {
-      background: url('https://wisp.wispnet.org/resources/trainrun_img(IMG_0936).jpeg') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/imgl/trainrun_img(IMG_0936).jpeg') no-repeat center;
       background-size: cover;
     }
 
     #pong {
-      background: url('https://wisp.wispnet.org/resources/x/pong.png') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/pngl/pong.png') no-repeat center;
       background-size: cover;
     }
 
