--- a/TDP/beta/isx1.html
+++ b/TDP/beta/isx1.html
@@ -124,17 +124,17 @@
     }
 
     #welcome {
-      background: url('https://wisp.wispnet.org/resources/redlight-trainyard_img(DSC_0157).JPG') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/imgl/redlight-trainyard_img(DSC_0157).JPG') no-repeat center;
       background-size: cover;
     }
 
     #about {
-      background: url('https://wisp.wispnet.org/resources/trainrun_img(IMG_0936).jpeg') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/imgl/trainrun_img(IMG_0936).jpeg') no-repeat center;
       background-size: cover;
     }
 
     #pong {
-      background: url('https://wisp.wispnet.org/resources/x/pong.png') no-repeat center;
+      background: url('https://wisp.wispnet.org/resources/pngl/pong.png') no-repeat center;
       background-size: cover;
     }
 
