--- a/TDP/beta/portifoliotest2.html
+++ b/TDP/beta/portifoliotest2.html
@@ -32,7 +32,7 @@
 <p class="p1"><span class="Apple-converted-space">            </span>position: relative;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>width: 100vw;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>height: 100vh;</p>
-<p class="p1"><span class="Apple-converted-space">            </span>background-image: url('lightstreet_img(DSC_0337).JPG');</p>
+<p class="p1"><span class="Apple-converted-space">            </span>background-image: url('imgl/lightstreet_img(DSC_0337).JPG');</p>
 <p class="p1"><span class="Apple-converted-space">            </span>background-size: cover;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>background-position: center;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>display: flex;</p>
