--- a/depreciated/index.html
+++ b/depreciated/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: url('https://wisp.wispnet.org/resources/flame_img(DSC_0284).JPG') no-repeat center center fixed;
+      background: url('https://wisp.wispnet.org/resources/imgl/flame_img(DSC_0284).JPG') no-repeat center center fixed;
       background-size: cover;
       color: #333;
       display: flex;
