Iteration Two (i2) Patch No. 0A
WISPNET Web Iteration Two (i2) patch notes:

- Moved incorrectly located resources for the VX Project page.
- Corrected resource references in the VX Project page.
- Created resource folder for .svg filetype.

--- a/rdd/fadetest/fadetest.html
+++ b/rdd/fadetest/fadetest.html
@@ -21,9 +21,9 @@
     </style>
 </head>
 <body>
-    <img src="fadetest.svg" class="arrow" id="arrow1" width="50">
-    <img src="fadetest.svg" class="arrow" id="arrow2" width="50">
-    <img src="fadetest.svg" class="arrow" id="arrow3" width="50">
+    <img src="../../resources/svgl/fadetest.svg" class="arrow" id="arrow1" width="50">
+    <img src="../../resources/svgl/fadetest.svg" class="arrow" id="arrow2" width="50">
+    <img src="../../resources/svgl/fadetest.svg" class="arrow" id="arrow3" width="50">
 
     <script>
         function fadeInArrows() {
