--- a/vx/index_yun.html
+++ b/vx/index_yun.html
@@ -134,9 +134,9 @@
     <h1>The VX Project</h1>
     <h2>The open-source weather research station.</h2>
     <div id="arrows">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
-      <img src="fadetest/fadetest.svg" class="arrow" width="50">
+      <img src="../resources/svgl/fadetest.svg" class="arrow" width="50">
+      <img src="../resources/svgl/fadetest.svg" class="arrow" width="50">
+      <img src="../resources/svgl/fadetest.svg" class="arrow" width="50">
   </div>
   </section>
 
