--- a/rdd/statwidget/status-dynamic.html
+++ b/rdd/statwidget/status-dynamic.html
@@ -80,7 +80,7 @@
     const endpoints = [
       { id: 'wispnet-org', url: 'https://wispnet.org' },
       { id: 'wisp-wispnet-org', url: 'https://wisp.wispnet.org' },
-      { id: 'twingate-wispnet-org', url: 'https://twingate.wispnet.org' },
+      { id: 'wispnet-twingate-org', url: 'https://twingate.wispnet.org' },
       { id: 'betelchurch-org', url: 'https://betelchurch.org' },
       { id: 'betelchapel-org', url: 'https://betelchapel.org' },
     ];
