Update depreciated index

--- a/depreciated/index.html
+++ b/depreciated/index.html
@@ -2,7 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WISPNET – The Deprecated</title>
+  <title>WISPNET – Deprecated</title>
+    <link rel="icon" href="resources/icx/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="resources/icx/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="resources/icx/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="resources/icx/favicon-16x16.png">
+  <link rel="stylesheet" href="/resources/css/nav-mki.css">
+  <link rel="stylesheet" href="/TDP/rev/rev.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style type="text/css">
     body {
       font-family: Arial, sans-serif;
@@ -34,8 +44,18 @@
 <body>
   <header>
     <h1>WISPNET Deprecated</h1>
-    <p>The archive of the deprecated... Reminiscent of times past...</p>
+    <p>This directory serves as an archive of previous iterations of website design concepts.</p>
+    <p><small>The archive of the deprecated... Reminiscent of times past...</small></p>
   </header>
+
+  <nav id="navbar">
+    <button id="menu-toggle">☰</button>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/IOserver/index.html">IOserver</a></li>
+      <li><a href="/vx/index.html">VX Project</a></li>
+    </ul>
+  </nav>
 
   <!-- Main content area (if needed) -->
   <main style="flex: 1;"></main>
