Depreciated Directory Rename

--- a/TDP/index.html
+++ b/TDP/index.html
@@ -184,7 +184,7 @@
       <a href="javascript:void(0)" class="dropbtn">Links</a>
       <ul class="dropdown-content">
         <li><a href="https://wisp.wispnet.org/resources">Resources</a></li>
-        <li><a href="https://wisp.wispnet.org/depreciated">Depreciated</a></li>
+        <li><a href="https://wisp.wispnet.org/depr">Depreciated</a></li>
         <li><a href="https://wisp.wispnet.org/IOserver">IOserver</a></li>
       </ul>
     </div>
@@ -217,7 +217,7 @@
         <nav class="secondary-nav">
           <a href="https://wisp.wispnet.org/TDP/beta">Beta</a>
           <a href="https://wisp.wispnet.org/IOserver">IOserver</a>
-          <a href="https://wisp.wispnet.org/depreciated">Depreciated</a>
+          <a href="https://wisp.wispnet.org/depr">Depreciated</a>
           <a href="https://wisp.wispnet.org/resources">Image Resources</a>
         </nav>
       </section>
