--- a/vx/index.html
+++ b/vx/index.html
@@ -143,7 +143,7 @@
       <a href="https://wisp.wispnet.org/TDP">TDP</a>
       <a href="https://wisp.wispnet.org/TDP/Beta">Beta</a>
       <a href="https://wisp.wispnet.org/resources">Resources</a>
-      <a href="https://wisp.wispnet.org/depreciated">Depreciated</a>
+      <a href="https://wisp.wispnet.org/depr">Depreciated</a>
     </div>
 
     <!-- Existing main section -->
